initial pass of edits.

--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -1,4 +1,18 @@
 
+@article{buza2014can,
+  title = {Can Crusher Design in Response to Environmental Concerns},
+  author = {Buza, Sh and Buza, K and Pllana, BSc Krenar},
+  year = {2014},
+  journal = {Journal of Trends in the Development of Machinery and Associated Technology},
+  volume = {18},
+  number = {1},
+  pages = {179--182}
+}
+
+@misc{epa,
+  publisher = {{Environmental Protection Agency}}
+}
+
 @article{jovicevic-klugComparativeStudyConventional2020,
   title = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}:2 ({{EN}} 1.3395) High-Speed Steel},
   shorttitle = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}},
@@ -11,6 +25,27 @@
   doi = {10.1016/j.jmrt.2020.09.071},
   abstract = {High-speed steel Mechanical properties Fatigue resistance Tribology a b s t r a c t This study focuses on the changes in mechanical and tribological properties of selected AISI M3:2 high-speed steel when exposed to deep cryogenic treatment (DCT). At the same time, it provides a comparative study of DCT effectiveness on two different steel grades (AISI M3:2 and AISI M2). The impact of DCT is determined by comparing mechanical and tribological properties of selected steels when exposed to conventional vacuum heat treatment and heat treatment comprising DCT. The properties investigated include hardness, fracture toughness, fatigue resistance under cycling bending as well as abrasive wear resistance. This study is also one of the first to disclose the influence of DCT on the properties of M3:2 steel. The results of this investigation show that DCT positively influences both steels, exhibiting higher fracture toughness, improved fatigue resistance and conditionally better wear resistance, while inducing minimal changes in hardness. This study also provides an input on the influence Co dynamics in DCT treated steels, at which the Co grade steel shows improvement of its properties with DCT.},
   file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\2GNQPD5U\\Jovičević-Klug and Podgornik - 2020 - Comparative study of conventional and deep cryogen.pdf}
+}
+
+@misc{mcmaster-carrCorrosionResistant316316L2021,
+  title = {Corrosion-{{Resistant}} 316/{{316L Stainless Steel Hex Bar}} 1" {{Wide}}},
+  author = {{McMaster-Carr}},
+  year = {2021},
+  abstract = {The addition of molybdenum gives 316 stainless steel excellent corrosion resistance. Use it in a variety of marine and chemical-processing applications. It maintains its corrosion resistance up to the maximum temperature. 316/316L stainless steel contains less carbon than standard 316 for better weldability.}
+}
+
+@misc{mcmaster-carrCrankHandleMachinable2021,
+  title = {Crank {{Handle}} with {{Machinable Solid Hub}}, 11" {{Center-to-End Width}}},
+  author = {{McMaster-Carr}},
+  year = {2021},
+  abstract = {Mill specific holes or keyways in the hub to meet your specifications or weld in place. Often used on cross-slide tables, these crank handles provide leverage to maximize force for turning and tightening.}
+}
+
+@misc{mcmaster-carrHexBoreBallBearing2022,
+  title = {Hex-{{Bore Ball Bearing Trade Number}} 206, for 1" {{Shaft Width}}},
+  author = {{McMaster-Carr}},
+  year = {2022},
+  abstract = {Mount these bearings onto a hex shaft. All have an extended inner ring for additional shaft support. Seals keep out dust and contaminants.}
 }
 
 @article{novyGigacycleFatigueEndurance2013,
@@ -52,18 +87,4 @@
   isbn = {978-0-13-485928-6}
 }
 
- @misc{epa, 
-  url={https://www.epa.gov/facts-and-figures-about-materials-waste-and-recycling/aluminum-material-specific-data}, 
-  journal={EPA}, 
-  publisher={Environmental Protection Agency}
-} 
 
-@article{buza2014can,
-  title={Can Crusher Design in Response to Environmental Concerns},
-  author={Buza, Sh and Buza, K and Pllana, BSc Krenar},
-  journal={Journal of Trends in the Development of Machinery and Associated Technology},
-  volume={18},
-  number={1},
-  pages={179--182},
-  year={2014}
-}
