--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -9,6 +9,11 @@
   pages = {179--182}
 }
 
+@article{christensenman,
+  title = {Man-Systems Integration Standards {{NASA-STD-3000}}, Volume {{II}} Revision {{B}}, July 1995},
+  author = {Christensen, Julien M and McBarron, James W and McConville, John T and Pogue, William R and Williges, Robert C and Woodson, Wesley E}
+}
+
 @misc{epa,
   publisher = {{Environmental Protection Agency}}
 }
@@ -74,6 +79,12 @@
   doi = {10.2320/matertrans.43.2949},
   abstract = {The corrosion fatigue properties under sine wave loading in Eagle's medium were compared among various metallic biomaterials: SUS-316L stainless steel, Co-Cr-Mo cast alloy and three types of vanadium-free titanium alloy, namely {$\alpha$} + {$\beta$} type Ti-6Al-7Nb, Ti-6Al-2Nb-1Ta and a variety of newly developed Ti-15Zr-4Ta-4Nb alloys. The number of cycles to failure for the SUS-316L stainless steel and Co-Cr-Mo cast alloy increased as the maximum stress decreased. The fatigue strengths of the SUS-316L stainless steel and Co-Cr-Mo cast alloy at 1 \texttimes{} 108 cycles were much lower than those of the titanium alloys. The fatigue strengths of the vanadium-free Ti-6Al-7Nb and Ti-6Al-2Nb-1Ta alloys at 1 \texttimes{} 108 cycles were approximately 600 and 720 MPa, respectively. The fatigue strengths of the Ti-15Zr-4Nb-4Ta alloys annealed at 700\textdegree C for 2 h were about 700 MPa at 1 \texttimes{} 108 cycles, and were not significantly affected by varying the frequency from 2 to 10 Hz. Aging of the Ti-15Zr-4Nb-4Ta alloy containing 0.2\%O and 0.05\%N after solution treatment increased its ultimate tensile strength to 1150 MPa, and the total elongation and reduction in the area were 15 and 50\%, respectively. The fatigue strength of the Ti-15Zr-4Ta-4Nb alloy treated in this way was 880 MPa under sine wave loading of 10 Hz at 1 \texttimes{} 108 cycles. This strength proved to be nearly identical to that estimated for the human hip joint, following an analysis of its movements and the forces acting upon it in vivo. The fatigue strength ratios at 1 \texttimes{} 108 cycles to ultimate tensile strength of the SUS-316L stainless steel and Co-Cr-Mo cast alloy were about 50\%. The fatigue strength ratio at 1 \texttimes{} 108 cycles to ultimate tensile strength of the Ti-6Al-2Nb-1Ta alloy was high at 75\%. In the case of the Ti-15Zr-4Nb-4Ta alloy annealed or aged after solution treatment, the fatigue strength ratio to ultimate tensile strength was about 75\%. Many striations and cracks caused by fatigue were visible on the fatigue-fractured surfaces of the SUS-316L stainless steel and Co-Cr-Mo cast alloy. Micro-cracks in dimples were also apparent on the fatigue-fractured surface of the titanium alloys.},
   file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\DSBK9LIX\\Okazaki and Gotoh - 2002 - Corrosion Fatigue Properties of Metallic Biomateri.pdf}
+}
+
+@misc{OverviewMaterialsStainless,
+  title = {Overview of Materials for {{Stainless Steel}}},
+  howpublished = {https://www.matweb.com/search/datasheet\_print.aspx?matguid=71396e57ff5940b791ece120e4d563e0},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\7D6RB687\\datasheet_print.html}
 }
 
 @book{uguralAdvancedMechanicsMaterials2019,
