--- a/Asciidoc/Document/carsons_ref.bib
+++ b/Asciidoc/Document/carsons_ref.bib
@@ -13,3 +13,8 @@
   pages={179--182},
   year={2014}
 }
+
+@article{christensenman,
+  title={Man-Systems Integration Standards NASA-STD-3000, Volume II Revision B, July 1995},
+  author={Christensen, Julien M and McBarron, James W and McConville, John T and Pogue, William R and Williges, Robert C and Woodson, Wesley E}
+}
