--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -87,6 +87,13 @@
   file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\7D6RB687\\datasheet_print.html}
 }
 
+@misc{SAEAISI1023G10230,
+  title = {{{SAE-AISI}} 1023 ({{G10230}}) {{Carbon Steel}} :: {{MakeItFrom}}.Com},
+  shorttitle = {{{SAE-AISI}} 1023 ({{G10230}}) {{Carbon Steel}}},
+  howpublished = {https://www.makeitfrom.com/material-properties/SAE-AISI-1023-G10230-Carbon-Steel},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\D87HTI5D\\SAE-AISI-1023-G10230-Carbon-Steel.html}
+}
+
 @book{uguralAdvancedMechanicsMaterials2019,
   title = {Advanced {{Mechanics}} of {{Materials}} and {{Applied Elasticity}} ({{International Series}} in the {{Physical}} and {{Chemical Engineering Sciences}})},
   author = {Ugural, Ansel and Fenster, Saul},
